# rustgine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: rustgine-feature-request.md  rustgine-issue.md
.github/workflows/: ci.yml
ci/scripts/: check-version-match.sh  get-version.sh
crates/app/: Cargo.toml  README.md
crates/app/src/: lib.rs  main.rs
crates/app/src/resources/: mod.rs  runtime.rs  shutdown.rs  shutdown_test.rs  state.rs
crates/app/tests/: core_integration.rs  shutdown_test.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  config_test.rs  lib.rs  system.rs  trace.rs  trace_test.rs
crates/ecs/: Cargo.toml  README.md
crates/ecs/src/: ecs.rs  lib.rs
crates/math/: Cargo.toml  README.md
crates/math/src/: lib.rs
crates/platform/: Cargo.toml  README.md
crates/platform/src/: lib.rs  platform.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: lib.rs  render.rs
crates/scheduler/: Cargo.toml  README.md
crates/scheduler/src/: lib.rs  scheduler.rs
docs/: architecture.md
src/: main.rs
